# zero-c

./: .gitignore  README.md
adlog-analyze/: adlog-analyze.cabal
adlog-analyze/app/: Main.hs
adlog-analyze/src/: Lib.hs
kael-confgen/: kael-confgen.cabal  view.sh
kael-confgen/app/: Main.hs
kael-confgen/src/: Lib.hs
monet/: monet.cabal
monet/app/: Main.hs
monet/src/: Lib.hs
quiz/e1/: e1.cpp  e1.h
quiz/e2/: e2.cpp  e2.h
quiz/e3/: e3.cpp  e3.h
quiz/e4/: Solution.java
trial-snap/: compile.sh  deploy.sh  shutdown.sh  startup.sh  trial-snap.cabal  zoo.html
trial-snap-s/: compile.sh  reboot.sh  shutdown.sh  startup.sh  trial-snap-s.cabal
trial-snap-s/bootstrap/: hero.html
trial-snap-s/dota2/: heroes_schinese.data
trial-snap-s/src/: Dota2.hs  Main.hs
trial-snap/bootstrap/: hero.html  index.html
trial-snap/dota2/: extractor.py  heroes.data  heroes_english.htm  heroes_schinese.htm
trial-snap/src/: Dota2.hs  Main.hs  Test.hs
tutorial-lens/: tutorial-lens.cabal
tutorial-lens/app/: Main.hs
tutorial-lens/src/: Lib.hs
tutorial-snap/: stack.yaml  tutorial-snap.cabal
